--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,14 @@
 language: cpp
+compiler: g++
 
-compiler:
-  - gcc-4.9
-  - g++-4.9
-  
-before_script:
-  - make clean
+before_install:
+- sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
+- sudo apt-get update -qq
+
+install:
+- sudo apt-get install -qq g++-4.8
+- export CXX="g++-4.8"
 
 script:
   - make
   - ./ConnectXTest
-  
